fix white space issue beneath article main media

--- a/static/src/stylesheets/module/content-garnett/_content.scss
+++ b/static/src/stylesheets/module/content-garnett/_content.scss
@@ -1412,6 +1412,7 @@
                 top: 0;
                 margin: 0;
                 align-self: start;
+                height: 0;
             }
         }
     }
